--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </svg>
       </a>
       <a href="tel:+380970000000" title="Зв’язатись">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-          <path d="M4 4L9 5L10 9L7.5 11.5C9 14.5 11.5 17 14.5 18.5L17 16L21 17V21C21 21.6 20.6 22 20 22C11.2 22 2 12.8 2 4C2 3.4 2.4 3 3 3H4V4Z" stroke="#fff" stroke-width="1.5"/>
-        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
+  <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
+</svg>
       </a>
       <a href="https://instagram.com" title="Instagram" target="_blank">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
