--- a/index.html
+++ b/index.html
@@ -37,6 +37,71 @@
   </header>
 
   <main>
+    <section class="locations">
+  <div class="location-item">
+    <div class="location-text">
+      <strong>вул. Прикладна, 1</strong>
+      <span>Працюємо 24/7</span>
+    </div>
+    <div class="location-actions">
+      <a href="tel:+380970000001" title="Зателефонувати">
+        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M4 4L9 5L10 9L7.5 11.5C9 14.5 11.5 17 14.5 18.5L17 16L21 17V21C21 21.6 20.6 22 20 22C11.2 22 2 12.8 2 4C2 3.4 2.4 3 3 3H4V4Z"/></svg>
+      </a>
+      <a href="https://maps.google.com?q=вул.+Прикладна,+1" title="Маршрут">
+        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M12 2C7 2 3 6 3 11c0 5.5 6.5 11 9 11s9-5.5 9-11c0-5-4-9-9-9Zm0 5.5A1.5 1.5 0 1 1 12 10a1.5 1.5 0 0 1 0-3Z"/></svg>
+      </a>
+    </div>
+    
+  </div>
+      <div class="location-item">
+    <div class="location-text">
+      <strong>вул. Прикладна, 1</strong>
+      <span>Працюємо 24/7</span>
+    </div>
+    <div class="location-actions">
+      <a href="tel:+380970000001" title="Зателефонувати">
+        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M4 4L9 5L10 9L7.5 11.5C9 14.5 11.5 17 14.5 18.5L17 16L21 17V21C21 21.6 20.6 22 20 22C11.2 22 2 12.8 2 4C2 3.4 2.4 3 3 3H4V4Z"/></svg>
+      </a>
+      <a href="https://maps.google.com?q=вул.+Прикладна,+1" title="Маршрут">
+        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M12 2C7 2 3 6 3 11c0 5.5 6.5 11 9 11s9-5.5 9-11c0-5-4-9-9-9Zm0 5.5A1.5 1.5 0 1 1 12 10a1.5 1.5 0 0 1 0-3Z"/></svg>
+      </a>
+    </div>
+  </div>
+
+      <div class="location-item">
+    <div class="location-text">
+      <strong>вул. Прикладна, 1</strong>
+      <span>Працюємо 24/7</span>
+    </div>
+    <div class="location-actions">
+      <a href="tel:+380970000001" title="Зателефонувати">
+        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M4 4L9 5L10 9L7.5 11.5C9 14.5 11.5 17 14.5 18.5L17 16L21 17V21C21 21.6 20.6 22 20 22C11.2 22 2 12.8 2 4C2 3.4 2.4 3 3 3H4V4Z"/></svg>
+      </a>
+      <a href="https://maps.google.com?q=вул.+Прикладна,+1" title="Маршрут">
+        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M12 2C7 2 3 6 3 11c0 5.5 6.5 11 9 11s9-5.5 9-11c0-5-4-9-9-9Zm0 5.5A1.5 1.5 0 1 1 12 10a1.5 1.5 0 0 1 0-3Z"/></svg>
+      </a>
+    </div>
+  </div>
+
+  <!-- Інші локації копіюються нижче так само -->
+  <div class="location-item">
+    <div class="location-text">
+      <strong>вул. Зразкова, 5</strong>
+      <span>Працюємо 24/7</span>
+    </div>
+    <div class="location-actions">
+      <a href="tel:+380970000002" title="Зателефонувати">
+        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M4 4L9 5L10 9L7.5 11.5C9 14.5 11.5 17 14.5 18.5L17 16L21 17V21C21 21.6 20.6 22 20 22C11.2 22 2 12.8 2 4C2 3.4 2.4 3 3 3H4V4Z"/></svg>
+      </a>
+      <a href="https://maps.google.com?q=вул.+Зразкова,+5" title="Маршрут">
+        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M12 2C7 2 3 6 3 11c0 5.5 6.5 11 9 11s9-5.5 9-11c0-5-4-9-9-9Zm0 5.5A1.5 1.5 0 1 1 12 10a1.5 1.5 0 0 1 0-3Z"/></svg>
+      </a>
+    </div>
+  </div>
+
+  <!-- Ще дві — як копії з іншими адресами -->
+</section>
+
     <section class="ios-section" id="appointment">
       <h2>Запис онлайн</h2>
       <form>
