--- a/index.html
+++ b/index.html
@@ -19,114 +19,70 @@
     <div class="header-icons">
       <a href="https://instagram.com" title="Instagram" target="_blank">
         <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-instagram header-icon" viewBox="0 0 16 16">
-          <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
+          <path d="..." />
         </svg>
       </a>
       <a href="#appointment" title="Запис">
         <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-calendar-check header-icon" viewBox="0 0 16 16">
-          <path d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0"/>
-          <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+          <path d="..." />
         </svg>
       </a>
       <a href="tel:+380970000000" title="Зв’язатись">
         <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-telephone header-icon" viewBox="0 0 16 16">
-          <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58z"/>
+          <path d="..." />
         </svg>
       </a>
     </div>
   </header>
 
-  <main>
-    <section class="locations">
-  <div class="location-item">
-    <div class="location-text">
-      <strong>вул. Прикладна, 1</strong>
-      <span>Працюємо 24/7</span>
+  <!-- 🔽 БЛОК ЛОКАЦІЙ -->
+  <section class="locations">
+    <div class="location-item">
+      <div class="location-text">
+        <strong>вул. Прикладна, 1</strong>
+        <span>Працюємо 24/7</span>
+      </div>
+      <div class="location-actions">
+        <a href="tel:+380970000001"><svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M4 4L9 5L10 9L7.5 11.5C9 14.5 11.5 17 14.5 18.5L17 16L21 17V21C21 21.6 20.6 22 20 22C11.2 22 2 12.8 2 4C2 3.4 2.4 3 3 3H4V4Z"/></svg></a>
+        <a href="https://maps.google.com?q=вул.+Прикладна,+1"><svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M12 2C7 2 3 6 3 11c0 5.5 6.5 11 9 11s9-5.5 9-11c0-5-4-9-9-9Zm0 5.5A1.5 1.5 0 1 1 12 10a1.5 1.5 0 0 1 0-3Z"/></svg></a>
+      </div>
     </div>
-    <div class="location-actions">
-      <a href="tel:+380970000001" title="Зателефонувати">
-        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M4 4L9 5L10 9L7.5 11.5C9 14.5 11.5 17 14.5 18.5L17 16L21 17V21C21 21.6 20.6 22 20 22C11.2 22 2 12.8 2 4C2 3.4 2.4 3 3 3H4V4Z"/></svg>
-      </a>
-      <a href="https://maps.google.com?q=вул.+Прикладна,+1" title="Маршрут">
-        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M12 2C7 2 3 6 3 11c0 5.5 6.5 11 9 11s9-5.5 9-11c0-5-4-9-9-9Zm0 5.5A1.5 1.5 0 1 1 12 10a1.5 1.5 0 0 1 0-3Z"/></svg>
-      </a>
-    </div>
-    
-  </div>
-      <div class="location-item">
-    <div class="location-text">
-      <strong>вул. Прикладна, 1</strong>
-      <span>Працюємо 24/7</span>
-    </div>
-    <div class="location-actions">
-      <a href="tel:+380970000001" title="Зателефонувати">
-        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M4 4L9 5L10 9L7.5 11.5C9 14.5 11.5 17 14.5 18.5L17 16L21 17V21C21 21.6 20.6 22 20 22C11.2 22 2 12.8 2 4C2 3.4 2.4 3 3 3H4V4Z"/></svg>
-      </a>
-      <a href="https://maps.google.com?q=вул.+Прикладна,+1" title="Маршрут">
-        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M12 2C7 2 3 6 3 11c0 5.5 6.5 11 9 11s9-5.5 9-11c0-5-4-9-9-9Zm0 5.5A1.5 1.5 0 1 1 12 10a1.5 1.5 0 0 1 0-3Z"/></svg>
-      </a>
-    </div>
-  </div>
 
-      <div class="location-item">
-    <div class="location-text">
-      <strong>вул. Прикладна, 1</strong>
-      <span>Працюємо 24/7</span>
+    <div class="location-item">
+      <div class="location-text">
+        <strong>вул. Зразкова, 5</strong>
+        <span>Працюємо 24/7</span>
+      </div>
+      <div class="location-actions">
+        <a href="tel:+380970000002"><svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M4 4L9 5L10 9L7.5 11.5C9 14.5 11.5 17 14.5 18.5L17 16L21 17V21C21 21.6 20.6 22 20 22C11.2 22 2 12.8 2 4C2 3.4 2.4 3 3 3H4V4Z"/></svg></a>
+        <a href="https://maps.google.com?q=вул.+Зразкова,+5"><svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M12 2C7 2 3 6 3 11c0 5.5 6.5 11 9 11s9-5.5 9-11c0-5-4-9-9-9Zm0 5.5A1.5 1.5 0 1 1 12 10a1.5 1.5 0 0 1 0-3Z"/></svg></a>
+      </div>
     </div>
-    <div class="location-actions">
-      <a href="tel:+380970000001" title="Зателефонувати">
-        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M4 4L9 5L10 9L7.5 11.5C9 14.5 11.5 17 14.5 18.5L17 16L21 17V21C21 21.6 20.6 22 20 22C11.2 22 2 12.8 2 4C2 3.4 2.4 3 3 3H4V4Z"/></svg>
-      </a>
-      <a href="https://maps.google.com?q=вул.+Прикладна,+1" title="Маршрут">
-        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M12 2C7 2 3 6 3 11c0 5.5 6.5 11 9 11s9-5.5 9-11c0-5-4-9-9-9Zm0 5.5A1.5 1.5 0 1 1 12 10a1.5 1.5 0 0 1 0-3Z"/></svg>
-      </a>
+
+    <div class="location-item">
+      <div class="location-text">
+        <strong>вул. Тестова, 10</strong>
+        <span>Працюємо 24/7</span>
+      </div>
+      <div class="location-actions">
+        <a href="tel:+380970000003"><svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M4 4L9 5L10 9L7.5 11.5C9 14.5 11.5 17 14.5 18.5L17 16L21 17V21C21 21.6 20.6 22 20 22C11.2 22 2 12.8 2 4C2 3.4 2.4 3 3 3H4V4Z"/></svg></a>
+        <a href="https://maps.google.com?q=вул.+Тестова,+10"><svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M12 2C7 2 3 6 3 11c0 5.5 6.5 11 9 11s9-5.5 9-11c0-5-4-9-9-9Zm0 5.5A1.5 1.5 0 1 1 12 10a1.5 1.5 0 0 1 0-3Z"/></svg></a>
+      </div>
     </div>
-  </div>
 
-  <!-- Інші локації копіюються нижче так само -->
-  <div class="location-item">
-    <div class="location-text">
-      <strong>вул. Зразкова, 5</strong>
-      <span>Працюємо 24/7</span>
+    <div class="location-item">
+      <div class="location-text">
+        <strong>вул. Випробувальна, 15</strong>
+        <span>Працюємо 24/7</span>
+      </div>
+      <div class="location-actions">
+        <a href="tel:+380970000004"><svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M4 4L9 5L10 9L7.5 11.5C9 14.5 11.5 17 14.5 18.5L17 16L21 17V21C21 21.6 20.6 22 20 22C11.2 22 2 12.8 2 4C2 3.4 2.4 3 3 3H4V4Z"/></svg></a>
+        <a href="https://maps.google.com?q=вул.+Випробувальна,+15"><svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M12 2C7 2 3 6 3 11c0 5.5 6.5 11 9 11s9-5.5 9-11c0-5-4-9-9-9Zm0 5.5A1.5 1.5 0 1 1 12 10a1.5 1.5 0 0 1 0-3Z"/></svg></a>
+      </div>
     </div>
-    <div class="location-actions">
-      <a href="tel:+380970000002" title="Зателефонувати">
-        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M4 4L9 5L10 9L7.5 11.5C9 14.5 11.5 17 14.5 18.5L17 16L21 17V21C21 21.6 20.6 22 20 22C11.2 22 2 12.8 2 4C2 3.4 2.4 3 3 3H4V4Z"/></svg>
-      </a>
-      <a href="https://maps.google.com?q=вул.+Зразкова,+5" title="Маршрут">
-        <svg class="icon-circle" viewBox="0 0 24 24"><path fill="none" stroke="white" stroke-width="1.5" d="M12 2C7 2 3 6 3 11c0 5.5 6.5 11 9 11s9-5.5 9-11c0-5-4-9-9-9Zm0 5.5A1.5 1.5 0 1 1 12 10a1.5 1.5 0 0 1 0-3Z"/></svg>
-      </a>
-    </div>
-  </div>
+  </section>
 
-  <!-- Ще дві — як копії з іншими адресами -->
-</section>
-
-    <section class="ios-section" id="appointment">
-      <h2>Запис онлайн</h2>
-      <form>
-        <input type="text" placeholder="Ваше ім’я" required />
-        <input type="tel" placeholder="Телефон" required />
-        <input type="datetime-local" required />
-        <button type="submit">Записатись</button>
-      </form>
-    </section>
-
-    <section class="ios-section" id="location">
-      <h2>Ми на карті</h2>
-      <iframe src="https://maps.google.com/maps?q=Київ&t=&z=13&ie=UTF8&iwloc=&output=embed" loading="lazy"></iframe>
-    </section>
-
-    <section class="ios-section" id="contacts">
-      <h2>Контакти</h2>
-      <p>📞 +38 (097) 000-00-00</p>
-      <p>📧 shynomontazh@example.com</p>
-    </section>
-  </main>
-
-  <footer class="ios-footer">
-    <p>&copy; 2025 Шиномонтаж 24/7</p>
-  </footer>
+  <!-- інші секції (форма, карта, футер) вставляй за потреби -->
 
 </body>
 </html>
